common/networkpolicies/base/jobset-webhook-kubeflow-system.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jobset-webhook
  namespace: kubeflow-system
spec:
  podSelector:
    matchLabels:
      control-plane: controller-manager
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: trainer
      ports:
        - protocol: TCP
          port: 9443
