common/networkpolicies/base/trainer-webhook-kubeflow-system.yaml
---
# Network policy for trainer webhook in kubeflow-system
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: trainer-webhook
  namespace: kubeflow-system
spec:
  podSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: In
      values:
      - trainer
    - key: app.kubernetes.io/component
      operator: In
      values:
      - manager
  # The kubernetes api server must reach the webhook
  # https://www.elastic.co/guide/en/cloud-on-k8s/1.1/k8s-webhook-network-policies.html
  ingress:
  - ports:
    - protocol: TCP
      port: 9443
  policyTypes:
  - Ingress
